syntax = "proto3";

package gluon.contract;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gluon/contract/order.proto";
import "gluon/contract/params.proto";
import "gogoproto/gogo.proto";

option go_package = "gluon/x/contract/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
  // LazyRegisterOrder
  rpc LazyRegisterOrder(MsgLazyRegisterOrder) returns (MsgLazyRegisterOrderResponse);
  // CancelOrder
  rpc CancelOrder(MsgCancelOrder) returns (MsgCancelOrderResponse);
  // MatchOrder
  rpc MatchOrder(MsgMatchOrder) returns (MsgMatchOrderResponse);
}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "gluon/x/contract/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.

  // NOTE: All parameters must be supplied.
  Params params = 2 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

// MsgLazyRegisterOrder
message MsgLazyRegisterOrder {
  option (cosmos.msg.v1.signer) = "order";
  option (amino.name) = "gluon/x/contract/MsgLazyRegisterOrder";

  Order order = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  uint64 pairing_id = 2;
  bytes signature = 3;
}

// MsgLazyRegisterOrderResponse
message MsgLazyRegisterOrderResponse {}

// MsgCancelOrder
message MsgCancelOrder {
  option (cosmos.msg.v1.signer) = "user";
  option (amino.name) = "gluon/x/contract/MsgCancelOrder";

  string user = 1;
  string order_id = 2;
}

// MsgCancelOrderResponse
message MsgCancelOrderResponse {}

// MsgMatchOrder
message MsgMatchOrder {
  option (cosmos.msg.v1.signer) = "address_buy";
  option (cosmos.msg.v1.signer) = "address_sell";
  option (amino.name) = "gluon/x/contract/MsgMatchOrder";

  string address_buy = 1;
  string address_sell = 2;
  string order_id_buy = 3;
  string order_id_sell = 4;
  string amount = 5 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  string price = 6 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// MsgMatchOrderResponse
message MsgMatchOrderResponse {}
