syntax = "proto3";
package gluon.customauth.pairing;

option go_package = "gluon/x/customauth/types/pairing";

// Pairing PubKey
// This is only for adapting PubKey interface of Cosmos SDK
message PubKey {
  // Address binary
  bytes user = 1;
  uint64 pairing_id = 2;
}
