syntax = "proto3";

package gluon.order;

import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gluon/order/params.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

option go_package = "gluon/x/order/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
  // LazyRegisterOrder
  rpc LazyRegisterOrder(MsgLazyRegisterOrder) returns (MsgLazyRegisterOrderResponse);
  // CancelOrder
  rpc CancelOrder(MsgCancelOrder) returns (MsgCancelOrderResponse);
}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.

  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

// MsgLazyRegisterOrder
message MsgLazyRegisterOrder {
  option (cosmos.msg.v1.signer) = "user";

  string user = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  google.protobuf.Any order = 2 [(gogoproto.nullable) = false];
  // Hex string of 20 bytes of output of Address() method of PublicKey
  string pairing_index = 3;
  bytes signature = 4;
}

// MsgLazyRegisterOrderResponse
message MsgLazyRegisterOrderResponse {}

// MsgCancelOrder
message MsgCancelOrder {
  option (cosmos.msg.v1.signer) = "user";

  string user = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string order_hash = 2;
}

// MsgCancelOrderResponse
message MsgCancelOrderResponse {}
